flux/manifests/04-apps/social/stoat/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stoat
  labels:
    name: stoat
    images/dockerhub: "true"
