flux/manifests/04-apps/social/stoat/crond.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stoat-crond
  namespace: stoat
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stoat-crond
  template:
    metadata:
      labels:
        app: stoat-crond
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: crond
          # renovate: datasource=docker depName=ghcr.io/stoatchat/crond
          image: ghcr.io/stoatchat/crond:v0.15.1@sha256:6c419872ed364cd7fb61d2148bc24a93d0427221050db3b4c76957f8bd0e6474
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: revolt-config
              mountPath: /Revolt.toml
              subPath: Revolt.toml
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: revolt-config
          configMap:
            name: stoat-config
