flux/manifests/04-apps/social/stoat/pushd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stoat-pushd
  namespace: stoat
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stoat-pushd
  template:
    metadata:
      labels:
        app: stoat-pushd
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: pushd
          # renovate: datasource=docker depName=ghcr.io/stoatchat/pushd
          image: ghcr.io/stoatchat/pushd:v0.15.3@sha256:b7212314026197d9e997fbb20f14aa624748c96b0595f3015a6640877b061864
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - name: revolt-config
              mountPath: /Revolt.toml
              subPath: Revolt.toml
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: revolt-config
          configMap:
            name: stoat-config
