flux/manifests/04-apps/social/stoat/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stoat
  namespace: stoat
spec:
  parentRefs:
    - name: main-gateway
      namespace: cilium-system
      sectionName: https
  hostnames:
    - "stoat.gateway.services.apocrathia.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: stoat-api
          port: 14702
    - matches:
        - path:
            type: PathPrefix
            value: /ws
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: stoat-events
          port: 14703
    - matches:
        - path:
            type: PathPrefix
            value: /autumn
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: stoat-autumn
          port: 14704
    - matches:
        - path:
            type: PathPrefix
            value: /january
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: stoat-january
          port: 14705
    - matches:
        - path:
            type: PathPrefix
            value: /gifbox
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: stoat-gifbox
          port: 14706
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stoat-web
          port: 5000
